# llm-injection-detector

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  gui.py  gui_app.py  llm_injection_detector.py  llm_injection_detector_gui.py  paper.md  pyproject.toml
src/llm_injection_detector/: __init__.py  detector.py  gui.py  report.py
tests/: test_llm_injection_detector.py
