[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-injection-detector"
version = "0.1.0"
description = "Static and heuristic prompt injection and jailbreak detector for LLM applications"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["llm", "prompt-injection", "jailbreak", "security", "safety", "detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
llm-injection-detector = "llm_injection_detector:main"
llm-injection-detector-gui = "gui:main"

[tool.setuptools]
py-modules = ["llm_injection_detector", "gui"]
